update the code

--- a/CycleGAN_Draft1.ipynb
+++ b/CycleGAN_Draft1.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "15MFqiVNEhIL1jFGGK6GeOZtpc1uzPfXQ",
-      "authorship_tag": "ABX9TyPqGFiCtm5W3xL63Hc8tRwL",
+      "authorship_tag": "ABX9TyP7sjGUls4W604XrtagJgFX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/zhisheng-hua/Reproducing-and-Extending-the-CycleGAN-Model/blob/main/CycleGAN_Draft1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/zhisheng-hua/Reproducing-and-Extending-the-CycleGAN-Model/blob/cy/CycleGAN_Draft1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "j-OVhbBGfISI"
       },
@@ -68,13 +68,17 @@
         "from torchvision.utils import save_image\n",
         "# import albumentations as A\n",
         "\n",
-        "import time"
+        "from torchvision import transforms\n",
+        "\n",
+        "import time\n",
+        "\n",
+        "import random"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Constant Variables"
+        "# Hyperparameters"
       ],
       "metadata": {
         "id": "6bVWAUIxVojW"
@@ -83,49 +87,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# GROUND_PATH = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/DataSet/testA\"\n",
-        "# SEGMENT_PATH = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/DataSet/testB\"\n",
-        "\n",
-        "# GROUND_PATH_TEST = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/DataSet/testA\"\n",
-        "# SEGMENT_PATH_TEST = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/DataSet/testB\"\n",
-        "\n",
-        "\n",
         "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "print(\"Device:\", DEVICE)"
+      ],
+      "metadata": {
+        "id": "-vxmIPcJ3KLl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "LEARNING_RATE = 1e-5\n",
         "LAMBDA_IDENTITY = 10\n",
         "LAMBDA_CYCLE = 5\n",
-        "# WEIGHTS_GEN_G = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/Weights/GEN_G\"\n",
-        "# WEIGHTS_GEN_S = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/Weights/GEN_S\"\n",
-        "# WEIGHTS_DISC_G = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/Weights/DISC_G\"\n",
-        "# WEIGHTS_DISC_S = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/Weights/DISC_S\"\n",
-        "# SAVE_IMAGE = \"/content/drive/MyDrive/Courses/York Courses/Neural Networks and Deep Learning/Project/Images\"\n",
         "\n",
-        "\n",
-        "# transforms = A.Compose(\n",
-        "#     [\n",
-        "#         A.Resize(width=256, height=256),\n",
-        "#         A.HorizontalFlip(p=0.5),\n",
-        "#         A.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5], max_pixel_value=255),\n",
-        "#         ToTensor(),\n",
-        "#      ],\n",
-        "#     additional_targets={\"image\": \"image\",\n",
-        "#                         'image1': 'image',},\n",
-        "# )\n",
-        "\n",
-        "# transforms2 = A.Compose(\n",
-        "#     [\n",
-        "#         A.Resize(width=256, height=256),\n",
-        "#         ToTensor(),\n",
-        "#      ],\n",
-        "# )\n",
         "BATCH_SIZE = 1\n",
+        "NUM_EPOCHS = 50\n",
+        "\n",
         "NUM_WORKERS = 4\n",
-        "NUM_EPOCHS = 50"
+        "\n",
+        "LOAD_MODEL=False\n",
+        "SAVE_MODEL=False"
       ],
       "metadata": {
         "id": "lKEvvEdRVn3V"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +148,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DataSet"
+        "# Dataset"
       ],
       "metadata": {
         "id": "xorqpTpAV18P"
@@ -168,7 +157,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from torchvision import transforms\n",
+        "# Define image transformation\n",
         "\n",
         "train_data_transform = transforms.Compose([\n",
         "    transforms.Resize(256),\n",
@@ -185,7 +174,55 @@
       "metadata": {
         "id": "e9J4e-ONnS11"
       },
-      "execution_count": 177,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CustomDataSet(Dataset):\n",
+        "    def __init__(self, A_dir, B_dir, transform, random_pairs=False):\n",
+        "        self.A_dir = A_dir\n",
+        "        self.B_dir = B_dir\n",
+        "        self.transform = transform\n",
+        "\n",
+        "        self.A_img_filenames = os.listdir(self.A_dir)\n",
+        "        self.B_img_filenames = os.listdir(self.B_dir)\n",
+        "        self.A_size = len(self.A_img_paths)\n",
+        "        self.B_size = len(self.B_img_paths)\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return max(self.A_size, self.B_size)\n",
+        "\n",
+        "    def __getitem__(self, index):\n",
+        "        A_img_path = os.join(self.A_dir,\n",
+        "                             self.A_img_filenames[index % self.A_size])\n",
+        "        if random_pairs:\n",
+        "          B_index = index % self.B_size\n",
+        "        else:\n",
+        "          B_index = random.randint(0, self.B_size - 1)\n",
+        "        B_img_path = os.join(self.B_dir, self.B_img_filenames[B_index])\n",
+        "\n",
+        "        A_img = self.transform(Image.open(A_img_path))\n",
+        "        B_img = self.transform(Image.open(B_img_path))\n",
+        "\n",
+        "        return A_img, B_img"
+      ],
+      "metadata": {
+        "id": "TNYKRpXTV6GP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !mkdir ./Segment ./Ground"
+      ],
+      "metadata": {
+        "id": "32409u2-9Dka"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,64 +234,14 @@
       "metadata": {
         "id": "In8OEjAEuSu-"
       },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!mkdir ./Segment ./Ground"
-      ],
-      "metadata": {
-        "id": "32409u2-9Dka"
-      },
-      "execution_count": 45,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "class CityscapesDataSet(Dataset):\n",
-        "    def __init__(self, SegmentationPath, GroundImagePath, transform=None):\n",
-        "        self.GroundImagePath = GroundImagePath\n",
-        "        self.SegmentationPath = SegmentationPath\n",
-        "        self.transform = transform\n",
-        "\n",
-        "        self.GroundImages = os.listdir(GroundImagePath)\n",
-        "        self.SegmentImages = os.listdir(SegmentationPath)\n",
-        "        self.length_dataset = max(len(self.GroundImages), len(self.SegmentImages)) \n",
-        "        self.Gr_len = len(self.GroundImages)\n",
-        "        self.Sg_len = len(self.SegmentImages)\n",
-        "\n",
-        "    def __len__(self):\n",
-        "        return self.length_dataset\n",
-        "\n",
-        "    def __getitem__(self, index):\n",
-        "        Ground = self.GroundImages[index % self.Gr_len]\n",
-        "        Segment = self.SegmentImages[index % self.Sg_len]\n",
-        "\n",
-        "        Ground = Image.open(os.path.join(self.GroundImagePath, Ground)).convert(\"RGB\")\n",
-        "        Segment = Image.open(os.path.join(self.SegmentationPath, Segment)).convert(\"RGB\")\n",
-        "\n",
-        "        if self.transform:\n",
-        "            Ground = self.transform(Ground)\n",
-        "            Segment = self.transform(Segment)\n",
-        "            # Ground = Ground['image']\n",
-        "            # Segment = Segment['image']\n",
-        "\n",
-        "        return Segment, Ground"
-      ],
-      "metadata": {
-        "id": "TNYKRpXTV6GP"
-      },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Generator"
+        "# Generator\n",
+        "TODO Modify the code"
       ],
       "metadata": {
         "id": "YqZAcAJJSXEf"
@@ -283,7 +270,7 @@
       "metadata": {
         "id": "KMhkBIsOSWZx"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +290,7 @@
       "metadata": {
         "id": "u6cqvJqZuvW1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,13 +333,14 @@
       "metadata": {
         "id": "bd4faoHsux50"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Discriminator"
+        "# Discriminator\n",
+        "TODO Modify the code"
       ],
       "metadata": {
         "id": "nBs6pDsiSd-Y"
@@ -376,7 +364,7 @@
       "metadata": {
         "id": "RydVOs8Cgcmm"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,13 +398,14 @@
       "metadata": {
         "id": "M8T-FBTESrPw"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Train"
+        "# Train\n",
+        "TODO Modify the code"
       ],
       "metadata": {
         "id": "Y_tLfkrbvZp2"
@@ -510,7 +499,7 @@
       "metadata": {
         "id": "EpIT6DOmcjQY"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,20 +514,18 @@
     {
       "cell_type": "code",
       "source": [
-        "from torchvision import datasets"
+        "# from torchvision import datasets"
       ],
       "metadata": {
         "id": "8IOvnSTYGI1D"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "\n",
-        "LOAD_MODEL=False\n",
-        "SAVE_MODEL=False\n",
         "\n",
         "\n",
         "Disc_Ground = Discriminator(in_channel=3).to(DEVICE)\n",
@@ -555,6 +542,8 @@
         "\n",
         "L1 = nn.L1Loss()\n",
         "MSE = nn.MSELoss()\n",
+        "\n",
+        "\n",
         "# if LOAD_MODEL:\n",
         "\n",
         "#   Disc_Ground.load_state_dict(torch.load(WEIGHTS_DISC_G))\n",
@@ -575,7 +564,7 @@
         "#     # )\n",
         "# dataset = CityscapesDataSet(SEGMENT_PATH, GROUND_PATH, transforms2)\n",
         "# test_dataset = CityscapesDataSet(SEGMENT_PATH_TEST, GROUND_PATH_TEST, transforms2)\n",
-        "dataset = CityscapesDataSet(path1, path2, train_data_transform)\n",
+        "dataset = CustomDataSet(path1, path2, train_data_transform)\n",
         "# test_dataset = CityscapesDataSet(SEGMENT_PATH_TEST, GROUND_PATH_TEST, transforms2)\n",
         "\n",
         "loader = DataLoader(\n",
@@ -619,7 +608,7 @@
         },
         "outputId": "e1043edb-62b9-4e9c-ce24-4f1f23002b46"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5619,7 +5608,7 @@
         "id": "1p4Yx0XXSqgs",
         "outputId": "60eb6818-70b7-4d43-fb17-5827845bbe4a"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5660,7 +5649,7 @@
         "id": "GwspE86JAcPz",
         "outputId": "326b3bc3-2637-4a5b-f4f8-a639ace8ac0e"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
