update the training process

--- a/CycleGAN_Draft1.ipynb
+++ b/CycleGAN_Draft1.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "https://github.com/zhisheng-hua/Reproducing-and-Extending-the-CycleGAN-Model/blob/cy/CycleGAN_Draft1.ipynb",
-      "authorship_tag": "ABX9TyOx0rBcbEeoIcMiptnGlNTr",
+      "authorship_tag": "ABX9TyNzpkWVMDkBc1NH3BDwv/oK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d80b2d4d-26e3-47fd-b94a-30101f2e5c3e"
+        "outputId": "08a60c7e-c699-4c2f-9da1-b7c5e492417d"
       },
       "execution_count": 2,
       "outputs": [
@@ -117,7 +117,7 @@
         "LAMBDA_IDT = 10\n",
         "LAMBDA_CYCLE = 5\n",
         "\n",
-        "BATCH_SIZE = 64\n",
+        "BATCH_SIZE = 32\n",
         "NUM_EPOCHS = 3\n",
         "\n",
         "NUM_WORKERS = 4\n",
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "lKEvvEdRVn3V"
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "_MDUWpbIw4UW"
       },
-      "execution_count": 4,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "32409u2-9Dka"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
       ],
       "metadata": {
         "id": "-YQFxRVa3vXe",
-        "outputId": "700034a9-5b20-4b78-a6b7-96ca928e9495",
+        "outputId": "15089a67-61dd-4876-bad1-3f3a5b434fc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -486,25 +486,6 @@
         "    B_fake = G_A(A_real) # G_A(A)\n",
         "    A_fake = G_B(B_real) # G_B(B)\n",
         "\n",
-        "    ## Update generators\n",
-        "    opt_G.zero_grad()\n",
-        "    # GAN losses\n",
-        "    loss_GAN_G_A = cri_GAN(D_A(B_fake), D_labels_real)\n",
-        "    loss_GAN_G_B = cri_GAN(D_B(A_fake), D_labels_real)\n",
-        "    # Cycle losses\n",
-        "    loss_Cycle_G_A = cri_Cycle(G_B(B_fake), A_real) # loss(G_B(G_A(A)), A)\n",
-        "    loss_Cycle_G_B = cri_Cycle(G_A(A_fake), B_real) # loss(G_A(G_B(B)), B)\n",
-        "    # Identity losses\n",
-        "    loss_Idt_G_A = cri_Idt(G_A(B_real), B_real) # loss(G_A(B), B)\n",
-        "    loss_Idt_G_B = cri_Idt(G_B(A_real), A_real) # loss(G_B(A), A)\n",
-        "    # Combine all losses\n",
-        "    loss_G = (loss_GAN_G_A + loss_GAN_G_B\n",
-        "              + LAMBDA_CYCLE * (loss_Cycle_G_A + loss_Cycle_G_B)\n",
-        "              + LAMBDA_IDT * (loss_Idt_G_A + loss_Idt_G_B))\n",
-        "    # Update\n",
-        "    loss_G.backward()\n",
-        "    opt_G.step()\n",
-        "\n",
         "    ## Update discriminators\n",
         "    opt_D.zero_grad()\n",
         "    # Update D_A (discriminator for A->B)\n",
@@ -524,12 +505,31 @@
         "    loss_D_B = (loss_D_B_real + loss_D_B_fake) * 0.5\n",
         "    loss_D_B.backward()\n",
         "    # Update the optimizer\n",
-        "    opt_D.step()"
+        "    opt_D.step()\n",
+        "\n",
+        "    ## Update generators\n",
+        "    opt_G.zero_grad()\n",
+        "    # GAN losses\n",
+        "    loss_GAN_G_A = cri_GAN(D_A(B_fake), D_labels_real)\n",
+        "    loss_GAN_G_B = cri_GAN(D_B(A_fake), D_labels_real)\n",
+        "    # Cycle losses\n",
+        "    loss_Cycle_G_A = cri_Cycle(G_B(B_fake), A_real) # loss(G_B(G_A(A)), A)\n",
+        "    loss_Cycle_G_B = cri_Cycle(G_A(A_fake), B_real) # loss(G_A(G_B(B)), B)\n",
+        "    # Identity losses\n",
+        "    loss_Idt_G_A = cri_Idt(G_A(B_real), B_real) # loss(G_A(B), B)\n",
+        "    loss_Idt_G_B = cri_Idt(G_B(A_real), A_real) # loss(G_B(A), A)\n",
+        "    # Combine all losses\n",
+        "    loss_G = (loss_GAN_G_A + loss_GAN_G_B\n",
+        "              + LAMBDA_CYCLE * (loss_Cycle_G_A + loss_Cycle_G_B)\n",
+        "              + LAMBDA_IDT * (loss_Idt_G_A + loss_Idt_G_B))\n",
+        "    # Update\n",
+        "    loss_G.backward()\n",
+        "    opt_G.step()"
       ],
       "metadata": {
         "id": "2HGs3VEMhiSe"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -557,7 +557,7 @@
       "metadata": {
         "id": "jm-YnUgjyVR7"
       },
-      "execution_count": 21,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -579,23 +579,23 @@
       ],
       "metadata": {
         "id": "SKNcY7VNyvWu",
-        "outputId": "256dfe42-79f7-414c-85f0-76ea83502a7b",
+        "outputId": "f5d57985-8699-4f77-8031-abcc40bb0b58",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch:  0\n",
-            "  Time elapsed: 0.01541389385 min\n",
+            "  Time elapsed: 0.01948128835 min\n",
             "Epoch:  1\n",
-            "  Time elapsed: 0.0305093105 min\n",
+            "  Time elapsed: 0.031290635983333336 min\n",
             "Epoch:  2\n",
-            "  Time elapsed: 0.03222081765 min\n"
+            "  Time elapsed: 0.03382017703333333 min\n"
           ]
         }
       ]
@@ -608,13 +608,14 @@
         "#   index2 = 0\n",
         "#   # for index, (segm, grd) in enumerate(loop_prop):\n",
         "#   for index, (segm, grd) in enumerate(loader):\n",
+        "#     # print(\"TEST:\",index)\n",
         "#     grd = grd.to(DEVICE)\n",
         "#     segm = segm.to(DEVICE)\n",
         "\n",
         "#     H_reals = 0\n",
         "#     H_fakes = 0\n",
         "#     with torch.cuda.amp.autocast():\n",
-        "#         print(\"test\")\n",
+        "#         # print(\"test\")\n",
         "#         fake_ground = Gen_Ground(segm)\n",
         "#         D_H_real = Disc_Ground(grd)\n",
         "#         D_H_fake = Disc_Ground(fake_ground.detach())\n",
@@ -624,8 +625,8 @@
         "#         D_H_fake_loss = MSE(D_H_fake, torch.zeros_like(D_H_fake))\n",
         "#         D_H_loss = D_H_real_loss + D_H_fake_loss\n",
         "\n",
-        "#         print(torch.ones_like(D_H_real).shape)\n",
-        "#         print(torch.ones_like(D_H_real))\n",
+        "#         # print(torch.ones_like(D_H_real).shape)\n",
+        "#         # print(torch.ones_like(D_H_real))\n",
         "       \n",
         "#         fake_seg = Gen_Seg(grd)\n",
         "#         D_Z_real = Disc_Seg(segm)\n",
@@ -641,6 +642,8 @@
         "#     Disc_scaler.scale(D_loss).backward()\n",
         "#     Disc_scaler.step(optim_Disc)\n",
         "#     Disc_scaler.update()\n",
+        "\n",
+        "#     # print(\"TEST\")\n",
         "\n",
         "#     # Train Generators H and Z\n",
         "#     with torch.cuda.amp.autocast():\n",
@@ -691,7 +694,7 @@
       "metadata": {
         "id": "EpIT6DOmcjQY"
       },
-      "execution_count": 19,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -794,10 +797,52 @@
         "\n"
       ],
       "metadata": {
-        "id": "z66W2LNhvZje"
+        "id": "z66W2LNhvZje",
+        "outputId": "ada305a4-9944-444c-cc4f-85c94858d0c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 487
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:561: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(_create_warning_msg(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TEST\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-42-dfa50006f8a0>\u001b[0m in \u001b[0;36m<cell line: 58>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Epoch:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0ms_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime_ns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m     \u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrainCicleGAN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDisc_Ground\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGen_Seg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDisc_Seg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGen_Ground\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim_Disc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim_Gen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMSE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDisc_scaler\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGen_scaler\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m     \u001b[0me_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime_ns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Time elapsed: {} min\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me_time\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ms_time\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m1e9\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-41-215d7dc0d9fc>\u001b[0m in \u001b[0;36mTrainCicleGAN\u001b[0;34m(Disc_Ground, Gen_Seg, Disc_Seg, Gen_Ground, loader, optim_Disc, optim_Gen, L1, MSE, Disc_scaler, Gen_scaler)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0moptim_Gen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m     \u001b[0mGen_scaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscale\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m     \u001b[0mGen_scaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptim_Gen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m     \u001b[0mGen_scaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    485\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    486\u001b[0m             )\n\u001b[0;32m--> 487\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    488\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    489\u001b[0m         )\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    198\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
