--- a/CycleGAN_Draft1.ipynb
+++ b/CycleGAN_Draft1.ipynb
@@ -6,12 +6,8 @@
       "provenance": [],
       "gpuType": "V100",
       "toc_visible": true,
-      "collapsed_sections": [
-        "YqZAcAJJSXEf",
-        "nBs6pDsiSd-Y"
-      ],
       "mount_file_id": "https://github.com/zhisheng-hua/Reproducing-and-Extending-the-CycleGAN-Model/blob/cy/CycleGAN_Draft1.ipynb",
-      "authorship_tag": "ABX9TyNVMeY47M6d4ep2mpTMkJWi",
+      "authorship_tag": "ABX9TyM/CdzcY7u/JYCIwPaL1O0k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +48,7 @@
       ],
       "metadata": {
         "id": "dCvQHGCSJfGL",
-        "outputId": "9fac762f-6f3d-40e6-ab91-575e1070a5b5",
+        "outputId": "8dcd60c2-4211-4528-db1d-7852a3d75e0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -115,7 +111,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2cb05282-9a44-4419-a231-7521aad38045"
+        "outputId": "9c97b063-c3e8-4634-d2d0-3ea43ff330e7"
       },
       "execution_count": 3,
       "outputs": [
@@ -345,12 +341,12 @@
       ],
       "metadata": {
         "id": "-YQFxRVa3vXe",
-        "outputId": "6fcd46bf-e9fb-4fb4-ce2c-56a129fbb8d8",
+        "outputId": "2d540181-aec5-46e2-afc8-a6443a12602d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,13 +437,11 @@
         "    super().__init__()\n",
         "    self.padding = nn.ReflectionPad2d(1)\n",
         "    self.conv1 = ConvBlock(channel, channel, kernel_size=3, stride=1, padding=0, use_layer_norm=True)\n",
-        "    self.dropout = nn.Dropout(p)\n",
         "    self.conv2 = ConvBlock(channel, channel, kernel_size=3, stride=1, padding=0, use_layer_norm=True, use_acv=False)\n",
         "\n",
         "  def forward(self, x):\n",
         "    x1 = self.padding(x)\n",
         "    x1 = self.conv1(x1)\n",
-        "    x1 = self.dropout(x1)\n",
         "    x1 = self.padding(x1)\n",
         "    x1 = self.conv2(x1)\n",
         "    return x + x1"
@@ -698,7 +692,7 @@
       "metadata": {
         "id": "jm-YnUgjyVR7"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -735,13 +729,13 @@
       ],
       "metadata": {
         "id": "SKNcY7VNyvWu",
-        "outputId": "e06fa484-b137-4c60-e6d9-bebc7b0d38c3",
+        "outputId": "1830e7a5-b9ee-4f06-a0b9-ed26d7c85516",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 433
+          "height": 582
         }
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +748,41 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 11%|█         | 111/1000 [00:33<04:24,  3.36it/s]\n"
+            "100%|██████████| 1000/1000 [03:12<00:00,  5.21it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------------------------------------------\n",
+            "  Loss G: 11.943559, Loss D_B: 0.214719, Loss D_A: 0.228673, Next LR: 0.000200\n",
+            "----------------------------------------------------------------------------------\n",
+            "Epoch: 2 / 100\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1000/1000 [02:56<00:00,  5.65it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------------------------------------------\n",
+            "  Loss G: 11.562481, Loss D_B: 0.071293, Loss D_A: 0.073470, Next LR: 0.000200\n",
+            "----------------------------------------------------------------------------------\n",
+            "Epoch: 3 / 100\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 23%|██▎       | 228/1000 [00:40<02:16,  5.64it/s]\n"
           ]
         },
         {
@@ -764,10 +792,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-793f5dc06650>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;31m# Training process\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m   model_name, stats = train_CycleGAN_for_one_epoch(G_A, D_B, G_B, D_A,\n\u001b[0m\u001b[1;32m     10\u001b[0m                                                    \u001b[0mcri_GAN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcri_Cycle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcri_Idt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                                                    \u001b[0mopt_G\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_D\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-17-dff71203fc9b>\u001b[0m in \u001b[0;36mtrain_CycleGAN_for_one_epoch\u001b[0;34m(G_A, D_B, G_B, D_A, cri_GAN, cri_Cycle, cri_Idt, opt_G, opt_D, data_loader, use_image_pools, image_pools)\u001b[0m\n\u001b[1;32m     85\u001b[0m                                 + LAMBDA_IDT * (loss_Idt_G_A + loss_Idt_G_B)))\n\u001b[1;32m     86\u001b[0m     \u001b[0;31m# Update\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m     \u001b[0mloss_G\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m     \u001b[0mopt_G\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    485\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    486\u001b[0m             )\n\u001b[0;32m--> 487\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    488\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    489\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    198\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
+            "\u001b[0;32m<ipython-input-19-793f5dc06650>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;31m# Training process\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m   model_name, stats = train_CycleGAN_for_one_epoch(G_A, D_B, G_B, D_A,\n\u001b[0m\u001b[1;32m     10\u001b[0m                                                    \u001b[0mcri_GAN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcri_Cycle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcri_Idt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                                                    \u001b[0mopt_G\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt_D\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-17-dff71203fc9b>\u001b[0m in \u001b[0;36mtrain_CycleGAN_for_one_epoch\u001b[0;34m(G_A, D_B, G_B, D_A, cri_GAN, cri_Cycle, cri_Idt, opt_G, opt_D, data_loader, use_image_pools, image_pools)\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0mopt_G\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m     \u001b[0mavg_loss_G\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss_G\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m     \u001b[0mavg_loss_D_B\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss_D_B\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0mavg_loss_D_A\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss_D_A\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
